Bug 5363 - The div that contains the content on the details page needed a size so that it would not overflow.
Also cleaned up some of the livefleet.xhtml widget. It now uses prettyfaces for it's panel header in the same fashion as the other widgets.

--- a/web/src/main/webapp/css/main.css
+++ b/web/src/main/webapp/css/main.css
@@ -1835,6 +1835,7 @@ a.ls_tab_add_sbscr {
 }
 
 .dashboard_detail_content{
+    width: 815px;
 }
 
 
